# codec

./: CMakeLists.txt
Modules/: FindBoost.cmake
inc/: base64.h  codec.h
src/: .main.cpp.swp  main.cc
tests/: CMakeLists.txt  codec_test.cc
